[package]
name = "mkv_pro_manager"
version = "1.0.2"
edition = "2021"

[dependencies]
walkdir = "2.4"
regex = "1.10"
whatlang = "0.16"
anyhow = "1.0"
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
once_cell = "1.18"
rayon = "1.8"
dialoguer = "0.11"
crossbeam-channel = "0.5"
ctrlc = "3.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# panic = "abort" # Removed to reduce false positives (Wacatac.B!ml detection)
